sources/api/schnauzer/tests/templates/fails/01_valid_toml_missing_fields.template
[cute-puppies]
whippets = "yes"
beagles = "yes"
schnauzers = "yes"
+++
